--- a/report.tex
+++ b/report.tex
@@ -30,7 +30,8 @@ Starting location is: 1
 List of commands:
 
 \section*{Lose condition(s)}
-Description of how to lose the game:
+Description of how to lose the game: If the player takes too long (as in, types in CERTAINOSAEIDHGUOHGUOHG amount of 
+commands)
 
 List of commands:
 
