--- a/report.tex
+++ b/report.tex
@@ -6,7 +6,7 @@
 \usepackage[margin=0.75in]{geometry}
 
 \title{CSC111 Winter 2026 Project 1}
-\author{TODO: FILL IN YOUR NAME(S) HERE}
+\author{DAEUN LEE and ATTICUS LI}
 \date{\today}
 
 \begin{document}
@@ -42,27 +42,39 @@ Which parts of your code are involved in this functionality:
 \section*{Inventory}
 
 \begin{enumerate}
-\item All location IDs that involve items in the game:
+\item All location IDs that involve items in the game: 2, 3, 4, 5, 6
 
 \item Item data:
 \begin{enumerate}
-    \item For Item 1:
+    \item For Item 1: 
     \begin{itemize}
-    \item Item name:
-    \item Item start location ID:
-    \item Item target location ID:
+    \item Item name: Phone
+    \item Item start location ID: 1
     \end{itemize}
         \item For Item 2:
     \begin{itemize}
-    \item Item name:
-    \item Item start location ID:
-    \item Item target location ID:
+    \item Item name: Laptop Charger
+    \item Item start location ID: 2
     \end{itemize}
         \item For Item 3:
     \begin{itemize}
-    \item Item name:
-    \item Item start location ID:
-    \item Item target location ID:
+    \item Item name: Lucky Mug
+    \item Item start location ID: 3
+    \end{itemize}
+        \item For Item 4:
+    \begin{itemize}
+    \item Item name: USB Drive
+    \item Item start location ID: 4
+    \end{itemize}
+        \item For Item 5:
+    \begin{itemize}
+    \item Item name: Gloves
+    \item Item start location ID: 5
+    \end{itemize}
+        \item For Item 6:
+    \begin{itemize}
+    \item Item name: Powerbank
+    \item Item start location ID: 6
     \end{itemize}
     % Copy-paste the above if you have more items, to list ALL items
 \end{enumerate}
