--- a/report.tex
+++ b/report.tex
@@ -27,15 +27,26 @@ Example game map below (edit it to show your actual game map):
 Starting location is: 1
 
 \section*{Game solution}
-List of commands:
+List of commands:\\ 
+
+"take", "go south", "go west", "take", "go east", "take", "read", "go east", "dig", 
+"dig up", "dig left", "dig right", "dig down", "dig up", "take", "go west", "go north", "read", "go north", "take", "go east", "read", "take", "go west", "go south", "go south", "go west", "inventory"
 
 \section*{Lose condition(s)}
-Description of how to lose the game: If the player takes too long (as in, types in CERTAINOSAEIDHGUOHGUOHG amount of 
-commands)
+Description of how to lose the game:\\
 
-List of commands:
+If the player takes too long (as in, types in more than 100 commands), the player loses.\\
 
-Which parts of your code are involved in this functionality:
+List of commands: \\
+
+"go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look", "inventory", "go north", "go south", "read", "look",
+"inventory", "go north"\\
+
+(a.k.a, the pattern of "go north", "go south", "read", "look", "inventory" repeated 20 times, then an additional "go north", all in that order) \\
+
+Which parts of your code are involved in this functionality:\\
+
+In the main function, the game keeps up the player's steps, and since the step\_limit is 100, near the very end of the while loop, player's step is compared to step\_limit (step $>$ step\_limit). If the player's steps is greater than the step\_limit, a line explaining that the player has lost the game is displayed before the code breaks out of the loop, ending the game.\\
 
 % Copy-paste the above if you have multiple lose conditions and describe each possible way to lose the game
 
@@ -49,40 +60,49 @@ Which parts of your code are involved in this functionality:
     \item For Item 1: 
     \begin{itemize}
     \item Item name: Phone
+    \item Item description: Your phone that you can't go anywhere without.
     \item Item start location ID: 1
     \end{itemize}
         \item For Item 2:
     \begin{itemize}
     \item Item name: Laptop Charger
+    \item Item description: A charger that charges your laptop.
     \item Item start location ID: 2
     \end{itemize}
         \item For Item 3:
     \begin{itemize}
     \item Item name: Lucky Mug
+    \item Item description: Your favourite lucky mug.
     \item Item start location ID: 3
     \end{itemize}
         \item For Item 4:
     \begin{itemize}
     \item Item name: USB Drive
+    \item Item description: A really important flash drive that contains you and your partner's project.
     \item Item start location ID: 4
     \end{itemize}
         \item For Item 5:
     \begin{itemize}
     \item Item name: Gloves
+    \item Item description: Not your pair of gloves, but finders keepers.
     \item Item start location ID: 5
     \end{itemize}
         \item For Item 6:
     \begin{itemize}
     \item Item name: Powerbank
+    \item Item description: Your powerbank that's charging your phone right now.
     \item Item start location ID: 6
     \end{itemize}
     % Copy-paste the above if you have more items, to list ALL items
 \end{enumerate}
 
-    \item Exact command(s) that should be used to pick up an item (choose any one or more items for this example), and the command(s) used to use/drop the item (can copy the list you assigned to \texttt{inventory\_demo} in the \texttt{simulation.py} file)
+    \item Exact command(s) that should be used to pick up an item (choose any one or more items for this example), and the command(s) used to use/drop the item (can copy the list you assigned to \texttt{inventory\_demo} in the \texttt{simulation.py} file) \\
+
+    "take", "inventory", "go north", "go east", "read", "take", "inventory" 
+    
     \item Which parts of your code (file, class, function/method) are involved in handling the \texttt{inventory} command:
     
-    In adventure.py, the function display\_items() is the helper function in the main function that searches through the current inventory list (an instance attribute in the AdventureGame class) and prints each object Item (from game\_entities.py) which includes the item name and how many points can be obtained by taking this item.
+    In adventure.py, the function display\_items() is the helper function in the main function that searches through the current inventory list (an instance attribute in the AdventureGame class) and prints the name of each object Item (from game\_entities.py).
 \end{enumerate}
 
 \section*{Score}
@@ -90,14 +110,15 @@ Which parts of your code are involved in this functionality:
 
     \item Briefly describe the way players can earn score in your game. Include the first location in which they can increase their score, and the exact list of command(s) leading up to the score increase:
     
-    Players can earn scores by collecting items around the map in different locations. The first location they can find an item in is the starting location 2, Robarts 2F - Dining Area, or location 5, Oak House, depending on where the player decides to go first. When the player runs the game, typing "go north" will direct the player to location 2, where they can pick up the Lucky Mug, which will add 100 points to their total score. If the player types "go south", it will direct the player to location 5, where they can pick up gloves, which will add 50 points to their total score.  
+    Players can earn scores by collecting items around the map in different locations, greatest scores earned by finding one of the three main items. The first location they can find an item is in location 2, which can be done by going to location 6 and charging the player's phone with a power bank, checking their friend's message, then going to location 2 to pick up their lucky mug.
     
-    \item Copy the list you assigned to \texttt{scores\_demo} in the \texttt{simulation.py} file into this section of the report:
-
+    \item Copy the list you assigned to \texttt{scores\_demo} in the \texttt{simulation.py} file into this section of the report:\\
+    
+    "take", "score", "go south", "go west", "take", "score", "go east", "go north", "go north", "take", "score"
 
     \item Which parts of your code (file, class, function/method) are involved in handling the \texttt{score} functionality:
     
-    In adventure.py, there is a function take\_item() in the main function. When a player enters a location with an item for the first time, this function will not only add an item to the inventory list, it will also add points to the player's total score (an instance attribute in the AdventureGame class) depending on which item the player finds.
+    In adventure.py, there is a helper function, take\_item(), in the main function. When a player enters a location with an item for the first time, this function will not only add an item to the inventory list, it will also add points to the player's total score (an instance attribute in the AdventureGame class) depending on which item the player finds.
     
     
 \end{enumerate}
@@ -106,23 +127,67 @@ Which parts of your code are involved in this functionality:
 \begin{enumerate}
     \item Describe your enhancement \#1 here
     \begin{itemize}
-        \item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it):
-        \item Complexity level (choose from low/medium/high):
-        \item Reasons you believe this is the complexity level (e.g., mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
-        \item Name the parts of the code which are involved in this enhancement
-        \item Copy the list you assigned to \texttt{enhancements\_demo} in the \texttt{simulation.py} file into this section of the report:
+        \item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): \\
+
+        Along with all the other menu commands, there is an additional "read" command that displays additional hints or information the player could use as a lead to finding the three main items. \\
+        
+        \item Complexity level (choose from low/medium/high): Medium
+        \item Reasons you believe this is the complexity level (e.g., mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.) \\
+        
+        For every single location, we had to add more descriptions, and when it came to running the main game, we had to add extra if statements. The command would give the player more choices, and it was a challenge to think of ways to incorporate the "read" command to help the player reach their goal to win the game. 
+        
+        \item Name the parts of the code which are involved in this enhancement\\
+        
+        - In game\_entities.py, the instance attribute read\_description was added.\\
+        - In adventure.py, in the main function, "read" was added as one of the options in the menu list.\\
+        - Helper function act() was added to incorporate new action when "read" command is used for one of the items ("Phone") and whether or not the player had item "Powerbank".\\
+        - In the while loop, an extra if statement for when player's choice is "read" was added.\\
+        \item Copy the list you assigned to \texttt{enhancements\_demo} in the \texttt{simulation.py} file into this section of the report:\\
+        "take", "read", "go north", "read", "go east", "read", "take"\\
     \end{itemize}
 
-    % Uncomment below section if you have more enhancements; copy-paste as needed
-    %\item Describe your enhancement here
-    %\begin{itemize}
-    %    \item Basic description of what the enhancement is:
-    %    \item Complexity level (low/medium/high):
-    %    \item Reasons you believe this is the complexity level (e.g., mention implementation details)
-    %    \item Name the parts of the code which are involved in this enhancement
-    %    \item Copy the list you assigned to \texttt{enhancements\_demo} in the \texttt{simulation.py} file into this section of the report:
-    %\end{itemize}
+    \item Describe enhancement \#2 here
+    \begin{itemize}
+        \item Basic description of what the enhancement is:\\
+        
+        When the player visits location 2, they can choose to order a drink at Starbucks. The player can choose between coffee or tea, grande or venti for the sizes, and hot or iced. By ordering a drink, the player can increase the amount of steps they can take.\\
+        \item Complexity level (low/medium/high): Medium
+        \item Reasons you believe this is the complexity level (e.g., mention implementation details) \\
+        
+        The enhancement does not require multiple locations, which reduces the complexity of the code. However, the challenge was to add unique commands/variables that would only be used in that location. The helper function was also a little difficult to figure out, especially when making it more efficient (reducing the amount of if statements used). \\
+        
+        \item Name the parts of the code which are involved in this enhancement\\
+
+        - In adventure.py, in the main function, a new menu list was added to store different options for the player when ordering at Starbucks.\\
+        - The order\_step variable was added to keep track of the player's steps while ordering, and to make sure the player is only allowed to order from Starbucks once.\\
+        - A new helper function was added, order\_drink(), which is used in the while loop when the player selects the "order a drink" command at location 2. The function uses if statements to display necessary responses to what order choices the player chooses and keeps track of whether or not the player has already ordered a drink before in the current game.\\
+
+        \item Copy the list you assigned to \texttt{enhancements\_demo} in the \texttt{simulation.py} file into this section of the report:\\
+        "go north", "order a drink", "coffee", "venti", "hot"
+    \end{itemize}
+
+    \item Describe enhancement \#3 here
+    \begin{itemize}
+        \item Basic description of what the enhancement is:\\
+        
+        When the player picks up item "Gloves" from location 5, go to location 4, and select the "dig" option, the player will able to start the mini puzzle. The player must figure out the correct combination of commands of "dig up", "dig down", "dig left", and "dig right" that will reveal one of the main three items, "USB Drive", buried in the snow. The correct combination is typing "dig up", "dig left", "dig right", "dig down", then "dig up" in that order. \\
+        \item Complexity level (low/medium/high): High
+        \item Reasons you believe this is the complexity level (e.g., mention implementation details) \\
+        
+        The complexity level is high for many reasons, one of them being because this enhancement required two helper function compared to the other two enhancements. It was also harder to implement because this was more of a "blind maze" type of puzzle, determining the difficulty level. Because it could not be too difficult or too easy, the combination had to be carefully selected. Small hints had to also be implemented in one of the helper functions, which was another difficult task. Compared to the other two enhancements, even more commands had to be added, and another issue was removing those extra commands once the player had completed the "dig" task successfully. \\
+        
+        \item Name the parts of the code which are involved in this enhancement\\
+
+        - In adventure.py, in the main function, extra variables "dig step" was added to keep track of the amount of steps the player takes for every dig command. \\
+        - The helper function dig\_helper() keeps track of the steps the player has taken for each choice made in the mini game and gives small hints redirecting or confirming their choices.\\
+        - The helper function dig\_game() adds temporary commands to available\_commands (instance attribute in Location class located in game\_entities.py) and displays them for the player to see. Once the player wins and finishes the game, the temporary commands are removed from the dictionary.\\
+        - In the while loop, if player's choice is "dig", inventory is checked to see if the player has picked up item "Gloves", and only then  can the player solve the mini puzzle.\\
+
+        \item Copy the list you assigned to \texttt{enhancements\_demo} in the \texttt{simulation.py} file into this section of the report:\\
+        "go south", "take", "go east", "dig", "dig up", "dig left", "dig right", "dig down", "dig up", "take"
+    \end{itemize}
 \end{enumerate}
 
 
 \end{document}
+
